--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="image avatar"><img src="images/profilepic.jpg" alt="" /></a>
 					<h1>
 						<strong>Susan Kight, M.S.</strong><br />
-						<strong>Data Scientist | Data Analyst | Product Owner</strong><br />
+						<strong>Data Scientist | Data Analyst</strong><br />
 						<br />
 						<strong>Portfolio of data science projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, and non-technical business presentations.</strong><br />
 						<br />
@@ -34,9 +34,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>
+							<h3>
 								I redefine organizational competitiveness at the intersection of data, strategy, and digital products to guide decision making and add business value.
-							</h2>
+							</h3>
 						</header>
 						<p>A fifteen-year diverse career evolving from marketing, business analysis, product management to data and analytics, and recent graduate study from a top-ranked Data Science masters program has created a unique skill set that is my greatest strength.  Known as a chief connector between business and technical teams who is a get-it-done guru, I strive on delivering business outcomes.</p>
 						<ul class="actions">
