--- a/AboutMe.html
+++ b/AboutMe.html
@@ -19,7 +19,7 @@
 				<a href="#" class="image avatar"><img src="images/profilepic.jpg" alt="" /></a>
 				<h1>
 					<strong>Susan Kight, M.S.</strong><br />
-					<strong>Data Scientist | Data Analyst | Product Owner</strong><br />
+					<strong>Data Scientist | Data Analyst</strong><br />
 					<br />
 					<strong>Portfolio of data science projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, and non-technical business presentations.</strong><br />
 					<br />
@@ -61,6 +61,9 @@
 
 				<h2>Recent Projects</h2>
 				<p>To view recent data science projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
+
+				<h2>Libraries/Packages Experience</h2>
+				<p>To view which libraries and packages I'm experienced with for Python and R view <a href="libraries.html">here</a>.</p>
 			</section>
 
 			<!-- Three -->
