--- a/AboutMe.html
+++ b/AboutMe.html
@@ -38,7 +38,7 @@
 						What excites me is data and analytics – it's my passion. Together with strong ambition as a data-driven problem solver and facination for data science, it has set a spark to use data in a way that transforms organizations to deliver real change and maximize value.
 					</h3>
 				</header>
-				<p>I thrive in cultures that embrace data and have a data-driven decision-making culture. This expands into the pro bono work that I do for a coalition of local food pantries offering data analytics services for which I’m on track to publish an IRB approved research study of my work on food insecurity.</p>
+				<p>I thrive in cultures that embrace data and have a data-driven decision-making culture. This expands into the pro bono work that I do for a coalition of local food pantries offering data analytics services and supporting an IRB approved research study on food insecurity.</p>
 
 				<p>The evolution in my career has been fueled by my curiosity, approach as a continuous learner, and innate data-driven intuition. It has enabled my career to develop towards data science as my skills have advanced. Using data and providing analytics, I add value across organizations supporting customer growth, market competitiveness, operational efficiencies and delivering business outcomes.</p>
 			</section>
