--- a/libraries.html
+++ b/libraries.html
@@ -19,7 +19,7 @@
 				<a href="#" class="image avatar"><img src="images/profilepic.jpg" alt="" /></a>
 				<h1>
 					<strong>Susan Kight, M.S.</strong><br />
-					<strong>Data Scientist | Data Analyst</strong><br />
+					<strong>Data Scientist | Lead Data Analyst</strong><br />
 					<br />
 					<strong>Portfolio of data science projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, and non-technical business presentations.</strong><br />
 					<br />
