--- a/AboutMe.html
+++ b/AboutMe.html
@@ -19,9 +19,9 @@
 				<a href="#" class="image avatar"><img src="images/profilepic.jpg" alt="" /></a>
 				<h1>
 					<strong>Susan Kight, M.S.</strong><br />
-					<strong>Data Scientist | Lead Data Analyst</strong><br />
+					<strong>Data Scientist | Data Engineer</strong><br />
 					<br />
-					<strong>Portfolio of data science projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, and non-technical business presentations.</strong><br />
+					<strong>Portfolio of data science and data engineering projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, other technical documents, and non-technical business presentations.</strong><br />
 					<br />
 					<strong><a href="https://github.com/kight-susan/datascienceportfolio/blob/master/Resume_SusanKight.pdf">Resume</a> | <a href="http://www.linkedin.com/in/susankight">LinkedIn</a> | <a href="https://github.com/kight-susan/datascienceportfolio">GitHub</a> | <a href="https://rpubs.com/kights">RPubs</a></strong>
 				</h1>
@@ -35,12 +35,12 @@
 			<section id="one">
 				<header class="major">
 					<h3>
-						What excites me is data and analytics – it's my passion. Together with strong ambition as a data-driven problem solver and facination for data science, it has set a spark to use data in a way that transforms organizations to deliver real change and maximize value.
+						What excites me is data is the endless problems that can be solved and opportunities created using it. My passion for data, has set a spark to use data to transform organizations to maximize value and deliver real change.
 					</h3>
 				</header>
-				<p>I thrive in cultures that embrace data and have a data-driven decision-making culture. This expands into the pro bono work that I do for a coalition of local food pantries offering data analytics services and supporting an IRB approved research study on food insecurity.</p>
+				<p>I thrive in cultures that embrace data and have a data-driven decision-making culture. With a broad set of expertise, I can support from across the entire data lifecycle from defining and developing techniques to integrate and consolidate data for analytical use through to performing advanced analytical capabilities.</p>
 
-				<p>The evolution in my career has been fueled by my curiosity, approach as a continuous learner, and innate data-driven intuition. It has enabled my career to develop towards data science as my skills have advanced. Using data and providing analytics, I add value across organizations supporting customer growth, market competitiveness, operational efficiencies and delivering business outcomes.</p>
+				<p>The evolution in my career has been fueled by my curiosity, approach as a continuous learner, and innate data-driven intuition. With a masters in Data Science from University of Iowa and post graduate program in Data Engineering from Purdue University, it has enabled my career to develop towards data engineering and data science as my skills have advanced. Ensuring data is available and using data analytics, I add value across organizations supporting organizational growth delivering business outcomes, market competitiveness, and operational efficiencies.</p>
 			</section>
 
 			<!-- Two -->
@@ -48,6 +48,7 @@
 				<h3>Strengths</h3>
 
 				<ul>
+					<li><strong>Data Engineering</strong> – I’m highly skilled data management solutions and platforms; connecting all the pieces of the data ecosystem within a company. Build efficient data pipelines to collect, move and store structured and unstructured data.</li>
 					<li><strong>Data Science</strong> – I’m relentless in the search for the best data and the best algorithm, applying knowledge and skills from across Statistics, Machine Learning, Artificial Intelligence, Computer Science, and Business disciplines.</li>
 					<li><strong>Data Analyst</strong> – I cut through the noise to find meaningful insights and frame recommendations to address problems for teams to shape the business opportunity.</li>
 					<li><strong>Data Visualization & Communication</strong> - I create a coherent narrative and tell a story through data visualizations and non-technical business-friendly presentations.</li>
@@ -57,13 +58,14 @@
 					<li><strong>Get-It-Done Guru</strong> – I turn thoughts/requests into action and drive projects forward staying laser-focused on the goal.</li>
 					<li><strong>Business Acumen</strong> – I have quickness in understanding the business domains/problems having worked on the business-side and able to translate it into analytics questions.</li>
 					<li><strong>Dependable Team Player</strong> – I work effectively in a team environment in concert with my colleagues across remote and cross-functional teams.</li>
+					<li><strong>Consultant</strong> –  I prepare sound strategic and tactical recommendations with rational to advise senior leaders on decisions relative to data lifecycle, and applicability and application of data technologies.</li>
 				</ul>
 
 				<h2>Recent Projects</h2>
-				<p>To view recent data science projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
+				<p>To view recent data science and data engineering projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
 
 				<h2>Libraries/Packages Experience</h2>
-				<p>To view which libraries and packages I'm experienced with for Python and R view <a href="libraries.html">here</a>.</p>
+				<p>To view technologies, libraries and packages I'm experienced in view these <a href="libraries.html">here</a>.</p>
 			</section>
 
 			<!-- Three -->
