--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 					<a href="#" class="image avatar"><img src="images/profilepic.jpg" alt="" /></a>
 					<h1>
 						<strong>Susan Kight, M.S.</strong><br />
-						<strong>Data Scientist | Lead Data Analyst</strong><br />
+						<strong>Data Scientist | Data Engineer</strong><br />
 						<br />
-						<strong>Portfolio of data science projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, and non-technical business presentations.</strong><br />
+						<strong>Portfolio of data science and data engineering projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, other technical documents, and and non-technical business presentations.</strong><br />
 						<br />
 						<strong><a href="https://github.com/kight-susan/datascienceportfolio/blob/master/Resume_SusanKight.pdf">Resume</a> | <a href="http://www.linkedin.com/in/susankight">LinkedIn</a> | <a href="https://github.com/kight-susan/datascienceportfolio">GitHub</a> | <a href="https://rpubs.com/kights">RPubs</a></strong>
 </h1>
@@ -35,10 +35,10 @@
 					<section id="one">
 						<header class="major">
 							<h3>
-								I redefine organizational competitiveness at the intersection of data, strategy, and digital products to guide decision making and add business value.
+								I support data modernization efforts and redefine organizational competitiveness using advanced analytics, at the intersection of data and strategy to add business value and achieve business goals.
 							</h3>
 						</header>
-						<p>A fifteen-year diverse career evolving from marketing, business analysis, product management to data and analytics, and recent graduate study from a top-ranked Data Science masters program has created a unique skill set that is my greatest strength.  Known as a chief connector between business and technical teams who is a get-it-done guru, I strive on delivering business outcomes.</p>
+						<p>A fifteen-year diverse career evolving from marketing, business analysis, product management to data and analytics, combined with  masters in Data Science from University of Iowa and post graduate program in Data Engineering from Purdue University has created a unique skill set that is my greatest strength. Known also as a chief connector between business and technical teams who is a get-it-done guru, I strive on delivering business outcomes.</p>
 						<ul class="actions">
 							<li><a href="AboutMe.html" class="button">About Me</a></li>
 						</ul>
