--- a/libraries.html
+++ b/libraries.html
@@ -16,12 +16,12 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="#" class="image avatar"><img src="images/profilepic.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="images/profilepic2.jpg" alt="" /></a>
 				<h1>
 					<strong>Susan Kight, M.S.</strong><br />
-					<strong>Data Scientist | Lead Data Analyst</strong><br />
+					<strong>Data Scientist | Data Engineer</strong><br />
 					<br />
-					<strong>Portfolio of data science projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, and non-technical business presentations.</strong><br />
+					<strong>Portfolio of data science and data engineering projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, techinical documents, and non-technical business presentations.</strong><br />
 					<br />
 					<strong><a href="https://github.com/kight-susan/datascienceportfolio/blob/master/Resume_SusanKight.pdf">Resume</a> | <a href="http://www.linkedin.com/in/susankight">LinkedIn</a> | <a href="https://github.com/kight-susan/datascienceportfolio">GitHub</a> | <a href="https://rpubs.com/kights">RPubs</a></strong>
 				</h1>
@@ -35,7 +35,7 @@
 			<section id="one">
 				<header class="major">
 					<h3>
-						Experienced across an extensive set of Libraries and Packages
+						Experienced across an extensive set of Technologies, Libraries and Packages
 					</h3>
 				</header>
 				<p>A self-starter who has digital and cross-channel domain expertise across a range of industries with coding skills across Python, R, and SQL. Ability to combine these with data visualization techniques, statistics, and modeling to share insights in a non-technical storytelling form to be used by decision-makers.</p>
