--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="#" class="image avatar"><img src="images/profilepic.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="images/profilepic2.jpg" alt="" /></a>
 				<h1>
 					<strong>Susan Kight, M.S.</strong><br />
 					<strong>Data Scientist | Data Engineer</strong><br />
