--- a/AboutMe.html
+++ b/AboutMe.html
@@ -35,12 +35,12 @@
 			<section id="one">
 				<header class="major">
 					<h3>
-						What excites me is data is the endless problems that can be solved and opportunities created using it. My passion for data, has set a spark to use data to transform organizations to maximize value and deliver real change.
+						What excites me about data are the endless problems that can be solved and the opportunities created using it. My passion for data has set a spark to use data to transform organizations to maximize value and deliver real change.
 					</h3>
 				</header>
-				<p>I thrive in cultures that embrace data and have a data-driven decision-making culture. With a broad set of expertise, I can support from across the entire data lifecycle from defining and developing techniques to integrate and consolidate data for analytical use through to performing advanced analytical capabilities.</p>
+				<p>The evolution in my career has been fueled by my curiosity, continuous learner mentality, and innate data-driven intuition. With a masters degree in Data Science from the University of Iowa and a post graduate program in Data Engineering from Purdue University, it has enabled my career to develop towards data science and engineering as my skills have advanced. Ensuring data is available and using advanced analytics, I add value across organizations supporting organizational growth delivering business outcomes, market competitiveness, and operational efficiencies.</p>
 
-				<p>The evolution in my career has been fueled by my curiosity, approach as a continuous learner, and innate data-driven intuition. With a masters in Data Science from University of Iowa and post graduate program in Data Engineering from Purdue University, it has enabled my career to develop towards data engineering and data science as my skills have advanced. Ensuring data is available and using data analytics, I add value across organizations supporting organizational growth delivering business outcomes, market competitiveness, and operational efficiencies.</p>
+				<p>With a broad set of expertise, I can support from across the entire data lifecycle from data architecture and engineering through to data science and advanced analytics. I have experience in cloud technologies across AWS and Azure, including certifications in AWS Cloud Practitioner and Azure Data Fundamentals.</p>
 			</section>
 
 			<!-- Two -->
@@ -62,7 +62,7 @@
 				</ul>
 
 				<h2>Recent Projects</h2>
-				<p>To view recent data science and data engineering projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
+				<p>To view recent data science and engineering projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
 
 				<h2>Libraries/Packages Experience</h2>
 				<p>To view technologies, libraries and packages I'm experienced in view these <a href="libraries.html">here</a>.</p>
