--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								I support data modernization efforts and redefine organizational competitiveness using data science and engineering at the intersection of data and strategy to add business value and achieve business goals.
 							</h3>
 						</header>
-						<p>A fifteen-year diverse career evolving from marketing, business analysis, product management to data and analytics, combined with  masters degree in Data Science from the University of Iowa and a post graduate program in Data Engineering from Purdue University has created a unique skill set that is my greatest strength. Known as a chief connector between business and technical teams who is a get-it-done guru, I strive on delivering business outcomes.</p>
+						<p>A seventeen-year diverse career evolving from marketing, business analysis, product management to data and analytics, combined with  masters degree in Data Science from the University of Iowa and a post graduate program in Data Engineering from Purdue University has created a unique skill set that is my greatest strength. Known as a chief connector between business and technical teams who is a get-it-done guru, I strive on delivering business outcomes.</p>
 						<ul class="actions">
 							<li><a href="AboutMe.html" class="button">About Me</a></li>
 						</ul>
