--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 					<a href="#" class="image avatar"><img src="images/profilepic2.jpg" alt="" /></a>
 					<h1>
 						<strong>Susan Kight, M.S.</strong><br />
-						<strong>Data Scientist | Data Engineer</strong><br />
+						<strong>Data Leader | Data Scientist|Engineer</strong><br />
 						<br />
-						<strong>Portfolio of data science and data engineering projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, other technical documents, and and non-technical business presentations.</strong><br />
+						<strong>Welcome to my personal website! I am thrilled to introduce myself as a dynamic and dedicated professional, driven by a strong set of values and a passion for achieving impactful results. I hope you enjoy learning more about me, my career and explore my data science portfolio.</strong><br />
 						<br />
 						<strong><a href="https://github.com/kight-susan/datascienceportfolio/blob/master/Resume_SusanKight.pdf">Resume</a> | <a href="http://www.linkedin.com/in/susankight">LinkedIn</a> | <a href="https://github.com/kight-susan/datascienceportfolio">GitHub</a> | <a href="https://rpubs.com/kights">RPubs</a></strong>
 </h1>
@@ -35,10 +35,10 @@
 					<section id="one">
 						<header class="major">
 							<h3>
-								I support data modernization efforts and redefine operational excellence through the development of enterprise data solutions, and architect data ingestion and workflows/pipelines for enterprise-wide operational information systems to add business value and achieve business goals.
+								Positive, Energetic, Detail-Oriented, and Trusted Data Technology Leader
 							</h3>
 						</header>
-						<p>Seasoned data consultant with a career spanning data science, data engineering, data architecture, analytics and business intelligence (BI) reporting, business analysis, and data product management. Combined with  masters degree in Data Science from the University of Iowa and a post graduate program in Data Engineering from Purdue University, it has created a unique skill set that is my greatest strength. Known as a chief connector between business and technical teams who is a get-it-done guru, I strive on delivering business outcomes.</p>
+						<p>Over my 17-year career, I have consistently demonstrated a strong track record of success and expertise in Data Engineering, Science, and Analytics. Leveraging my technical knowledge and ability to understand both business and technical requirements, has allowed me to effectively lead and support data teams throughout the entire data life cycle, from data architecture and engineering to advanced data science and analytics activities. As a chief connector between business and technical teams, I have established a strong reputation for delivering successful data-related projects, that include data modernization, data integrations, data warehousing, master data management, and data governance. My contributions have resulted in improved decision-making, increased efficiency, enhanced customer experiences, higher revenue, and improved competitiveness for the organizations I have served.</p>
 						<ul class="actions">
 							<li><a href="AboutMe.html" class="button">About Me</a></li>
 						</ul>
