--- a/AboutMe.html
+++ b/AboutMe.html
@@ -21,7 +21,7 @@
 					<strong>Susan Kight, M.S.</strong><br />
 					<strong>Data Scientist | Data Engineer</strong><br />
 					<br />
-					<strong>Portfolio of data science and data engineering projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, other technical documents, and non-technical business presentations.</strong><br />
+					<strong>Welcome to my personal website! I am thrilled to introduce myself as a dynamic and dedicated professional, driven by a strong set of values and a passion for achieving impactful results. I hope you enjoy learning more about me, my career and explore my data science portfolio.</strong><br />
 					<br />
 					<strong><a href="https://github.com/kight-susan/datascienceportfolio/blob/master/Resume_SusanKight.pdf">Resume</a> | <a href="http://www.linkedin.com/in/susankight">LinkedIn</a> | <a href="https://github.com/kight-susan/datascienceportfolio">GitHub</a> | <a href="https://rpubs.com/kights">RPubs</a></strong>
 				</h1>
@@ -40,11 +40,45 @@
 				</header>
 				<p>The evolution in my career has been fueled by my curiosity, continuous learner mentality, and innate data-driven intuition. With a masters degree in Data Science from the University of Iowa and a post graduate program in Data Engineering from Purdue University, it has enabled my career to develop towards data science and engineering as my skills have advanced. Ensuring data is available and using advanced analytics, I add value across organizations supporting organizational growth delivering business outcomes, market competitiveness, and operational efficiencies.</p>
 
-				<p>With a broad set of expertise, I can support from across the entire data lifecycle from data architecture and engineering through to data science and advanced analytics. I have experience in cloud technologies across AWS and Azure, including certifications in AWS Cloud Practitioner and Azure Data Fundamentals.</p>
+				<p>With a wide range of data and technology expertise, I can support from across the entire data lifecycle from data architecture and engineering through to data science and advanced analytics. I have experience in cloud technologies across AWS and Azure, including certifications in AWS Cloud Practitioner and Azure Data Fundamentals.</p>
 			</section>
 
 			<!-- Two -->
 			<section id="two">
+				<h3>Values</h3>
+				<p>Gratitude, Courage, Lifelong Learning, Balance, Confidence, Diversity, Equity, and Inclusion.</p>
+
+				<p>I believe in the power of gratitude, expressing appreciation for the blessings in my life. With courage as my ally, I face challenges head-on, taking calculated risks to foster personal growth. Lifelong learning is my constant pursuit, as I strive to expand my knowledge and skills for both personal and professional development. Achieving balance in all aspects of life is essential to me, whether it's work, relationships, or personal well-being. I embrace confidence in my abilities while remaining open to feedback and opportunities for growth. Furthermore, I am a passionate advocate for diversity, equity, and inclusion, particularly for women and women of color in the data science field.</p>
+			</section>
+
+			<!-- Two -->
+			<section id="three">
+				<h3>Purpose</h3>
+				<p>My purpose is to bring positive energy, empathy, and sincerity to empower, mentor, and support others. I am dedicated to advocating for a more diverse and equitable future. As an aspiring data and technology leader, I aim to create an inclusive space where everyone, especially women and women of color, can thrive.</p>
+			</section>
+
+			<!-- Two -->
+			<section id="four">
+				<h3>Mission</h3>
+				<p>As a committed leader, my mission is to:</p>
+
+				<ul>
+					<li>Create positive impact: I strive to enhance and contribute to everything I engage in, supporting and inspiring others to reach their full potential.</li>
+					<li>Cultivate emotional resilience and balance: I aim for a harmonious and fulfilling life, authentically showing up in my personal, family, and professional spheres.</li>
+					<li>Expand mental agility: Embracing challenges, I continuously expand my knowledge to support personal growth and become a formidable data leader.</li>
+					<li>Revitalize physical vitality: Prioritizing well-being, I lead an active lifestyle to revitalize my overall health.</li>
+				</ul>
+			</section>
+
+			<!-- Two -->
+			<section id="five">
+				<h3>Vision</h3>
+				<p>As a compassionate leader, my vision is to live authentically and with purpose. I embrace discomfort as a catalyst for growth, preparing for and rising to the next level of my career and personal journey. I aspire to make an impact in multiple areas: supporting clients in achieving their missions through technical expertise, contributing to organizational growth and innovative product development, fostering employee satisfaction and performance through coaching and mentoring, and facilitating the personal and professional growth of individuals in the data and technology fields. In addition, I strive to cultivate positive influence and nurturing relationships as a supportive and loving wife, daughter, sister, and aunt, serving as a role model for my family.</p>
+			</section>
+
+
+			<!-- Two -->
+			<section id="six">
 				<h3>Strengths</h3>
 
 				<ul>
@@ -69,7 +103,7 @@
 			</section>
 
 			<!-- Three -->
-			<section id="three">
+			<section id="seven">
 				<h2>Get In Touch</h2>
 				<p>If you liked what you read, want to have a chat with me about the portfolio, work opportunities, or collaboration, please call or email me.</p>
 				<div class="row">
