--- a/AboutMe.html
+++ b/AboutMe.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Susan Kight Data Scientist</title>
+		<title>Susan Kight Data Leader | Mentor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +19,9 @@
 				<a href="#" class="image avatar"><img src="images/profilepic2.jpg" alt="" /></a>
 				<h1>
 					<strong>Susan Kight, M.S.</strong><br />
-					<strong>Data Scientist | Data Engineer</strong><br />
+					<strong>Data and Technology Leader | Career Coach</strong><br />
 					<br />
-					<strong>Welcome to my personal website! I am thrilled to introduce myself as a dynamic and dedicated professional, driven by a strong set of values and a passion for achieving impactful results. I hope you enjoy learning more about me, my career and explore my data science portfolio.</strong><br />
+					<strong> Welcome to my personal website! I am thrilled to introduce myself as a trailblazing data and technology leader, driven by a strong set of values and a passion for achieving impactful results. I hope you enjoy learning more about me.</strong><br />
 					<br />
 					<strong><a href="https://github.com/kight-susan/datascienceportfolio/blob/master/Resume_SusanKight.pdf">Resume</a> | <a href="http://www.linkedin.com/in/susankight">LinkedIn</a> | <a href="https://github.com/kight-susan/datascienceportfolio">GitHub</a> | <a href="https://rpubs.com/kights">RPubs</a></strong>
 				</h1>
@@ -35,45 +35,43 @@
 			<section id="one">
 				<header class="major">
 					<h3>
-						What excites me about data are the endless problems that can be solved and the opportunities created using it. My passion for data has set a spark to use data to transform organizations to maximize value and deliver real change.
+						I bridge the gap between data, technology, and strategy to fuel transformation, innovation and growth. My passion also extends to empowering future data leaders through coaching.
 					</h3>
 				</header>
-				<p>The evolution in my career has been fueled by my curiosity, continuous learner mentality, and innate data-driven intuition. With a masters degree in Data Science from the University of Iowa and a post graduate program in Data Engineering from Purdue University, it has enabled my career to develop towards data science and engineering as my skills have advanced. Ensuring data is available and using advanced analytics, I add value across organizations supporting organizational growth delivering business outcomes, market competitiveness, and operational efficiencies.</p>
+				<p>The evolution in my career has been fueled by my curiosity, continuous learner mentality, and innate data-driven intuition. With a masters degree in Data Science from the University of Iowa and close to 20 years professional experience, it has enabled my career to develop towards data, engineering and software domains as my skills have advanced. With a wide range of data and technology expertise, I can support from across the entire data ecosystem, DevSecOps, and in cloud computing capabilities across AWS and Azure, including certifications in AWS Cloud Practitioner and Azure Data Fundamentals.</p>
 
-				<p>With a wide range of data and technology expertise, I can support from across the entire data lifecycle from data architecture and engineering through to data science and advanced analytics. I have experience in cloud technologies across AWS and Azure, including certifications in AWS Cloud Practitioner and Azure Data Fundamentals.</p>
-			</section>
-
-			<!-- Two -->
-			<section id="two">
-				<h3>Values</h3>
-				<p>Gratitude, Courage, Lifelong Learning, Balance, Confidence, Diversity, Equity, and Inclusion.</p>
-
-				<p>I believe in the power of gratitude, expressing appreciation for the blessings in my life. With courage as my ally, I face challenges head-on, taking calculated risks to foster personal growth. Lifelong learning is my constant pursuit, as I strive to expand my knowledge and skills for both personal and professional development. Achieving balance in all aspects of life is essential to me, whether it's work, relationships, or personal well-being. I embrace confidence in my abilities while remaining open to feedback and opportunities for growth. Furthermore, I am a passionate advocate for diversity, equity, and inclusion, particularly for women and women of color in the data science field.</p>
-			</section>
-
-			<!-- Two -->
-			<section id="three">
-				<h3>Purpose</h3>
-				<p>My purpose is to bring positive energy, empathy, and sincerity to empower, mentor, and support others. I am dedicated to advocating for a more diverse and equitable future. As an aspiring data and technology leader, I aim to create an inclusive space where everyone, especially women and women of color, can thrive.</p>
+				<p>Beyond technical proficiency,  I'm deeply commited to nurturing the next generation of data professionals. As a mentor and coach, I find immense fulfillment in guiding aspiring data leaders, imparting insights, and fostering growth in this rapidly evolving field.</p>
 			</section>
 
 			<!-- Two -->
 			<section id="four">
 				<h3>Mission</h3>
-				<p>As a committed leader, my mission is to:</p>
+				<p>As a data and technology leader committed to advancing myself, my mission is to:</p>
 
 				<ul>
-					<li>Create positive impact: I strive to enhance and contribute to everything I engage in, supporting and inspiring others to reach their full potential.</li>
-					<li>Cultivate emotional resilience and balance: I aim for a harmonious and fulfilling life, authentically showing up in my personal, family, and professional spheres.</li>
-					<li>Expand mental agility: Embracing challenges, I continuously expand my knowledge to support personal growth and become a formidable data leader.</li>
+					<li>Creating positive impact: Elevating everything I engage in and with – organizations and people. I aspire to support and inspire others to achieve their full potential.</li>
+					<li>Cultivate emotional resilience and balance: Achieving a harmonious and fulfilling life - in my personal, family, and professional spheres – showing up authentically as my whole self.</li>
+					<li>Expand mental agility: Embracing challenges and consistently expanding my knowledge to support personal self-growth and professionally to become a formidable data and technology leader driving change at the pace of need.</li>
 					<li>Revitalize physical vitality: Prioritizing well-being, I lead an active lifestyle to revitalize my overall health.</li>
 				</ul>
 			</section>
 
 			<!-- Two -->
-			<section id="five">
+			<section id="two">
 				<h3>Vision</h3>
-				<p>As a compassionate leader, my vision is to live authentically and with purpose. I embrace discomfort as a catalyst for growth, preparing for and rising to the next level of my career and personal journey. I aspire to make an impact in multiple areas: supporting clients in achieving their missions through technical expertise, contributing to organizational growth and innovative product development, fostering employee satisfaction and performance through coaching and mentoring, and facilitating the personal and professional growth of individuals in the data and technology fields. In addition, I strive to cultivate positive influence and nurturing relationships as a supportive and loving wife, daughter, sister, and aunt, serving as a role model for my family.</p>
+				<p>As a wholehearted leader, my vision is to live authentically and with purpose. I embrace discomfort as a catalyst for growth, preparing for and rising to the next level of my career and personal journey. I aspire to make an impact in multiple areas: supporting clients in achieving their missions through technical expertise, contributing to organizational growth and innovative product development, fostering employee satisfaction and performance through coaching and mentoring, and facilitating the personal and professional growth of individuals in the data and technology fields. In addition, I strive to cultivate positive influence and nurturing relationships.</p>
+			</section>
+
+			<!-- Two -->
+			<section id="three">
+				<h3>Purpose</h3>
+				<p>I bring my positive energy, creativity, and wholehearted self to all that I do enriching others’ lives and impacting industries.  Whether empowering, mentoring, and supporting others or, as a trusted data and technology leader, who courageously  uses use agility to drive innovation, supporting organizations to effectively move at the pace of need.</p>
+			</section>
+
+			<!-- Two -->
+			<section id="four">
+				<h3>Values</h3>
+				<p>Courage, Confidence, Gratitude, Grace, and Lifelong Learning.</p>
 			</section>
 
 
@@ -82,21 +80,28 @@
 				<h3>Strengths</h3>
 
 				<ul>
+					<li><strong>Data Strategist</strong> –  I develop comprehensive data strategies aligned with organizational objectives, ensuring that data initiatives drive business value and support long-term growth.</li>
+					<li><strong>Data Modernization</strong> –  I orchestrate data modernization efforts, modernizing legacy systems and infrastructure to unlock the full potential of data assets and drive operational efficiency.</li>
+					<li><strong>Digital Transformation</strong> –  I lead digital transformation initiatives, leveraging data and technology to modernize business processes, enhance customer experiences, and drive innovation across the organization.</li>
+					<li><strong>Cloud Migrations</strong> –  I lead cloud migration projects, seamlessly transitioning data and applications to cloud environments while optimizing performance, scalability, and cost-effectiveness.</li>
+					<li><strong>Technology Selection</strong> –  I provide expertise in selecting the right technologies and tools to meet business requirements, evaluating options based on factors such as scalability, performance, and compatibility with existing systems.</li>
+					<li><strong>DevSecOps</strong> –  I integrate security practices into the development and operations lifecycle, ensuring that data and technology solutions are robust, resilient, and secure from the outset.</li>
+					<li><strong>CyberSecurity</strong> –  I prioritize cybersecurity measures to safeguard data assets and mitigate risks, implementing robust security protocols and measures to protect against cyber threats.</li>
+					<li><strong>Data Architecture</strong> – I design robust data architectures that lay the foundation for scalable, efficient, and resilient data ecosystems, ensuring it supports business objectives.</li>
+					<li><strong>Data Management</strong> – I implement comprehensive data management strategies to govern data effectively throughout the lifecycle. Prioritize data quality, integrity, interoperability and security to mazimize the value.</li>
+					<li><strong>Trusted Consultant</strong> –  I prepare sound strategic and tactical recommendations with rational to advise senior leaders on decisions relative to data lifecycle, and applicability and application of data technologies.</li>
+					<li><strong>Business Acumen</strong> – I have quickness in understanding the business domains/problems having worked on the business-side and able to translate it into analytics questions.</li>
+					<li><strong>Chief Connector</strong> – I bridge the gap between business and technology teams; creating strong partnerships and maximizing productivity.</li>
 					<li><strong>Data Engineering</strong> – I’m highly skilled data management solutions and platforms; connecting all the pieces of the data ecosystem within a company. Build efficient data pipelines to collect, move and store structured and unstructured data.</li>
 					<li><strong>Data Science</strong> – I’m relentless in the search for the best data and the best algorithm, applying knowledge and skills from across Statistics, Machine Learning, Artificial Intelligence, Computer Science, and Business disciplines.</li>
 					<li><strong>Data Analyst</strong> – I cut through the noise to find meaningful insights and frame recommendations to address problems for teams to shape the business opportunity.</li>
 					<li><strong>Data Visualization & Communication</strong> - I create a coherent narrative and tell a story through data visualizations and non-technical business-friendly presentations.</li>
 					<li><strong>Data-Driven Intuition</strong> – I have developed the intuition to know the right questions to ask and the right algorithms for different applications.</li>
-					<li><strong>Data Wrangling</strong> – I'm conscientious in gathering, selecting, and transforming data to answer analytical questions.</li>
-					<li><strong>Chief Connector</strong> – I bridge the gap between business and technology teams; creating strong partnerships and maximizing productivity.</li>
 					<li><strong>Get-It-Done Guru</strong> – I turn thoughts/requests into action and drive projects forward staying laser-focused on the goal.</li>
-					<li><strong>Business Acumen</strong> – I have quickness in understanding the business domains/problems having worked on the business-side and able to translate it into analytics questions.</li>
-					<li><strong>Dependable Team Player</strong> – I work effectively in a team environment in concert with my colleagues across remote and cross-functional teams.</li>
-					<li><strong>Consultant</strong> –  I prepare sound strategic and tactical recommendations with rational to advise senior leaders on decisions relative to data lifecycle, and applicability and application of data technologies.</li>
 				</ul>
 
-				<h2>Recent Projects</h2>
-				<p>To view recent data science and engineering projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
+				<h2>Data Science Projects</h2>
+				<p>To view data science and engineering projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
 
 				<h2>Libraries/Packages Experience</h2>
 				<p>To view technologies, libraries and packages I'm experienced in view these <a href="libraries.html">here</a>.</p>
@@ -105,7 +110,7 @@
 			<!-- Three -->
 			<section id="seven">
 				<h2>Get In Touch</h2>
-				<p>If you liked what you read, want to have a chat with me about the portfolio, work opportunities, or collaboration, please call or email me.</p>
+				<p>If you're interested in connecting, exploring thought leadership collaboration, arranging public speaker opportunities, and for career coaching and mentoring, please call or email me.</p>
 				<div class="row">
 				</div>
 				<div class="col-4 col-12-small">
