--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Susan Kight Data Scientist</title>
+		<title>Susan Kight Data Leader | Mentor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +19,9 @@
 					<a href="#" class="image avatar"><img src="images/profilepic2.jpg" alt="" /></a>
 					<h1>
 						<strong>Susan Kight, M.S.</strong><br />
-						<strong>Data Leader | Data Scientist|Engineer</strong><br />
+						<strong>Data and Technology Leader | Career Coach</strong><br />
 						<br />
-						<strong>Welcome to my personal website! I am thrilled to introduce myself as a dynamic and dedicated professional, driven by a strong set of values and a passion for achieving impactful results. I hope you enjoy learning more about me, my career and explore my data science portfolio.</strong><br />
+						<strong>Welcome to my personal website! I am thrilled to introduce myself as a trailblazing data and technology leader, driven by a strong set of values and a passion for achieving impactful results. I hope you enjoy learning more about me.</strong><br />
 						<br />
 						<strong><a href="https://github.com/kight-susan/datascienceportfolio/blob/master/Resume_SusanKight.pdf">Resume</a> | <a href="http://www.linkedin.com/in/susankight">LinkedIn</a> | <a href="https://github.com/kight-susan/datascienceportfolio">GitHub</a> | <a href="https://rpubs.com/kights">RPubs</a></strong>
 </h1>
@@ -35,10 +35,10 @@
 					<section id="one">
 						<header class="major">
 							<h3>
-								Positive, Energetic, Detail-Oriented, and Trusted Data Technology Leader
+								Data Technology Leader Focused on Driving Innovation and Delivering Value. Career Coach to Aspiring Data Leaders
 							</h3>
 						</header>
-						<p>Over my 17-year career, I have consistently demonstrated a strong track record of success and expertise in Data Engineering, Science, and Analytics. Leveraging my technical knowledge and ability to understand both business and technical requirements, has allowed me to effectively lead and support data teams throughout the entire data life cycle, from data architecture and engineering to advanced data science and analytics activities. As a chief connector between business and technical teams, I have established a strong reputation for delivering successful data-related projects, that include data modernization, data integrations, data warehousing, master data management, and data governance. My contributions have resulted in improved decision-making, increased efficiency, enhanced customer experiences, higher revenue, and improved competitiveness for the organizations I have served.</p>
+						<p>With nearly two decades of experience at the nexus of data, technology, and business strategy, I bring a unique blend of technical acumen and strategic vision. Passionate about leveraging data as a catalyst for meaningful business outcomes, my expertise spans designing and building data and analytics platforms, developing data-intensive applications, and spearheading AI/ML initiatives. I prioritize effective communication with stakeholders to ensure solutions drive tangible business value. I take pride in enhancing operational efficiencies, driving revenue growth, and elevating customer experiences. As a trusted advisor, I'm committed to driving business value through data-driven and technology innovation. Passionate about nurturing the next generation of data professionals through coaching and mentorship.</p>
 						<ul class="actions">
 							<li><a href="AboutMe.html" class="button">About Me</a></li>
 						</ul>
@@ -46,7 +46,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Projects</h2>
+						<h2>Data Science Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<p><img src="images/fulls/first02.jpg" class="image fit thumb" alt="Spotify" /></p>
@@ -106,7 +106,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>If you liked what you saw, want to have a chat with me about the portfolio, work opportunities, or collaboration, please call or email me.</p>
+						<p>If you're interested in connecting, exploring thought leadership collaboration, arranging public speaker opportunities, and for career coaching and mentoring, please call or email me.</p>
 						<div class="row">
 							</div>
 							<div class="col-4 col-12-small">
