--- a/libraries.html
+++ b/libraries.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Susan Kight Data Scientist</title>
+		<title>Susan Kight Data Leader | Mentor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,9 +19,9 @@
 				<a href="#" class="image avatar"><img src="images/profilepic2.jpg" alt="" /></a>
 				<h1>
 					<strong>Susan Kight, M.S.</strong><br />
-					<strong>Data Scientist | Data Engineer</strong><br />
+					<strong>Data and Technology Leader |  Career Coach</strong><br />
 					<br />
-					<strong>Portfolio of data science and data engineering projects completed by me in academic and pro bono settings, and presented in the form of iPython Jupyter Notebooks, R Markdown files, techinical documents, and non-technical business presentations.</strong><br />
+					<strong>Welcome to my personal website! I am thrilled to introduce myself as a trailblazing data and technology leader, driven by a strong set of values and a passion for achieving impactful results. I hope you enjoy learning more about me.</strong><br />
 					<br />
 					<strong><a href="https://github.com/kight-susan/datascienceportfolio/blob/master/Resume_SusanKight.pdf">Resume</a> | <a href="http://www.linkedin.com/in/susankight">LinkedIn</a> | <a href="https://github.com/kight-susan/datascienceportfolio">GitHub</a> | <a href="https://rpubs.com/kights">RPubs</a></strong>
 				</h1>
@@ -38,7 +38,7 @@
 						Experienced across an extensive set of Technologies, Libraries and Packages
 					</h3>
 				</header>
-				<p>A self-starter who has digital and cross-channel domain expertise across a range of industries with coding skills across Python, R, and SQL. Ability to combine these with data visualization techniques, statistics, and modeling to share insights in a non-technical storytelling form to be used by decision-makers.</p>
+				<p>A self-starter who has cross domain expertise across a range of industries with coding skills across Python, R, and SQL. Ability to perform data analysis, data visualization, statistics, and modeling to share insights in a non-technical storytelling form to be used by decision-makers.</p>
 
 				<p>My unique career on the business side as well as on technical teams offers me an edge in soft skills to influence decision-makers in leveraging data and insights to achieve organizational goals and objectives. </p>
 			</section>
@@ -54,6 +54,9 @@
 					<li>matplotlib</li>
 					<li>scipy</li>
 					<li>sklearn</li>
+					<li>PyTorch</li>
+					<li>MLflow</li>
+					<li>OpenCV</li>
 					<li>nltk</li>
 					<li>textblob</li>
 					<li>tensorflow</li>
@@ -91,14 +94,14 @@
 					<li>DBI</li>
 				</ul>
 				<h2>Recent Projects</h2>
-				<p>To view recent data science projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
+				<p>To view data science projects completed by me in academic and pro bono settings click <a href="index.html">here</a>.</p>
 
 			</section>
 
 			<!-- Three -->
 			<section id="three">
 				<h2>Get In Touch</h2>
-				<p>If you liked what you read, want to have a chat with me about the portfolio, work opportunities, or collaboration, please call or email me.</p>
+				<p>If you're interested in connecting, exploring thought leadership collaboration, arranging public speaker opportunities, and for career coaching and mentoring, please call or email me.</p>
 				<div class="row">
 				</div>
 				<div class="col-4 col-12-small">
